--- a/style.css
+++ b/style.css
@@ -10,25 +10,114 @@ body {
 h1 {
     position: absolute;
     font-family: 'planet-kosmos';
-    left: 100px;
+    left: calc(2% + 40px);
     top: 2%;
-    font-size: 2rem;
+    font-size: calc(2vw);
 }
 
 canvas {
-    position: absolute;
+    position: absolute; 
     width: 100vw;
     height: 100vh;
     z-index: 0;
 }
 
+
+
+.nav-bar {
+    position: absolute;
+    display: flex;
+    top: 0;
+    width: 80%;
+    height: 15%;
+    gap: 2rem;
+    align-items: center;
+    justify-content: space-evenly;
+    z-index: 1;
+    flex-wrap: wrap;
+}
+
+.nav-bar__logo {
+    font-family: 'planet-kosmos';
+    font-size: calc(1.5vw + 1rem);
+    text-decoration: none;
+    color: black;
+    text-decoration: underline;
+}
+
+.nav-bar__links {
+    display: flex;
+    gap: 2rem;
+    font-size: calc(1vw + 0.5rem);
+    list-style: none;
+    padding: 0;
+    justify-content: center;
+    align-items: center;
+}
+
+.nav-bar__link {
+    text-decoration: none;
+    color: black;
+}
+
+
+.headline-entry-container {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    gap: 2rem;
+    position: absolute;
+    top: 55%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 80%;
+    height: 80%;
+    align-items: center;
+    justify-content: center;
+}
+
+.headline-entry {
+    display: flex;
+    background-color: rgba(200, 200, 200, 0.3);
+    border-radius: 15px;
+    padding: 30px;
+    width: 20%;
+    height: 20%;
+    backdrop-filter: blur(2px);
+    border: 1px solid rgba(200, 200, 200, 0.3);
+    transform: scale(1);
+    transition: all 0.2s ease-in-out;
+    align-items: center;
+    justify-content: center;
+}
+
+.headline-entry:hover {
+    background-color: rgba(200, 200, 200, 0.5);
+    border: 1px solid rgba(200, 200, 200, 0.5);
+    transform: scale(1.05);
+    transition: all 0.2s ease-in-out;
+}
+
+
+.headline-image {
+    max-height: 100%;
+    max-width: 100%;
+    object-fit: contain;
+    border-radius: 15px;
+    opacity: 0.8;
+}
+
+
 .scroller {
     position: absolute;
+    display: flex;
     left: 0;
     height: 100vh;
-    width: 40px;
+    width: 5%;
+    max-width: 40px;
     background-color: black;
     z-index: 1;
+    justify-content: center;
 }
 
 .scroller-content {
@@ -41,13 +130,14 @@ canvas {
 
 .scroller__inner {
     position: absolute;
-    left: 25%;
     display: flex;
     flex-direction: row;
     flex-wrap: nowrap;
     gap: 8rem; /* IMPORTANT: tied to scroll animation (see @keyframes scroll) */
     writing-mode: vertical-lr;
     color: white;
+    /* adjust font size to be a third of the width of the scroller*/
+    font-size: clamp(calc(0.33 * 3vw), calc(0.33 * 40px), 2rem);
 }
 
 .scroller[data-animated="true"] {
