--- a/matlock-dev/src/index.css
+++ b/matlock-dev/src/index.css
@@ -34,6 +34,8 @@ footer {
     height: var(--footer-height);
     text-align: center;
     font-size: 1rem;
+    background-color: rgba(0, 0, 0, 0.1);
+    backdrop-filter: blur(2px);
 }
 
 nav {
@@ -60,7 +62,6 @@ nav {
     align-items: center;
     justify-content: center;
     width: 100%;
-    background-color: rgba(0, 0, 0, 0.1);
 }
 
 
@@ -119,7 +120,13 @@ nav {
     color: white;
     font-family: Arial, Helvetica, sans-serif;
     font-size: 1rem;
-}
+    width: 1rem;
+    height: 1rem; /* prevents alignment changes when scroller item is swapped */
+    flex-shrink: 0;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+} 
 
 #three-canvas {
     position: fixed;
