--- a/matlock-dev/src/index.css
+++ b/matlock-dev/src/index.css
@@ -26,6 +26,20 @@ header {
     z-index: 1;
 }
 
+h2 {
+    margin-bottom: 1rem;
+    text-shadow: 0 1px 2px rgba(0,0,0,0.25);
+    line-height: 1.6;
+    margin-left: 3rem;
+}
+
+img {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    z-index: -1;
+}
+
 footer {
     display: flex;
     justify-content: center;
@@ -33,8 +47,7 @@ footer {
     width: 100%;
     height: var(--footer-height);
     text-align: center;
-    font-size: 1rem;
-    background-color: rgba(0, 0, 0, 0.1);
+    font-size: 0.6rem;
     backdrop-filter: blur(2px);
 }
 
@@ -42,6 +55,64 @@ nav {
     display: flex;
     min-width: 50rem;
     align-items: center;
+}
+
+p {
+    margin-bottom: 0.5rem;
+    color: rgb(80,80,80);
+    text-shadow: 0 1px 2px rgba(0,0,0,0.25);
+    line-height: 1.6;
+}
+
+time {
+    margin-bottom: 1rem;
+    font-size: 0.6rem;
+    text-shadow: 0 1px 2px rgba(0,0,0,0.25);
+    line-height: 1.6;
+}
+
+.card-container {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+    gap: 2rem;
+    padding: 2rem;
+    max-width: 1200px; /* good default for desktops */
+    margin: 0 auto;    /* centers the container */
+}
+
+.card {
+    background: rgba(0, 0, 0, 0.1);
+    backdrop-filter: blur(2px) saturate(150%);
+    -webkit-backdrop-filter: blur(2px) saturate(150%);
+    border-radius: 1rem;
+    padding: 1.5rem;
+    color: inherit;
+    text-decoration: none;
+    box-shadow: 0 6px 25px rgba(0, 0, 0, 0.2);
+    transition: all 0.25s ease-in-out;
+    background-image: linear-gradient(
+        to bottom right,
+        rgba(255, 255, 255, 0.25),
+        rgba(100, 100, 170, 0.15)
+    );
+}
+
+.vertical-long {
+    grid-row: span 2;
+}
+
+.card:hover {
+    transform: translateY(-5px);
+    box-shadow: 0 8px 16px rgba(0,0,0,0.15);
+}
+
+.card-icon {
+    filter: invert(30%) sepia(100%) saturate(500%) hue-rotate(200deg);
+    filter: drop-shadow(2px 2px 3px rgba(0, 0, 0, 0.4));
+    width: 2rem;                /* size of the logo */
+    height: 2rem;
+    top: 1.7rem;                  /* position from top of card */
+    object-fit: contain;         /* keep aspect ratio */
 }
 
 
@@ -52,6 +123,10 @@ nav {
     margin-left: var(--scroller-width);
     width: calc(100% - var(--scroller-width));
     overflow-x: hidden;
+    background: radial-gradient(circle at top left, rgba(100,200,255,0.3), transparent 70%), 
+                radial-gradient(circle at bottom right, rgba(0,150,100,0.3), transparent 70%);
+
+
 }
 
 
@@ -62,6 +137,7 @@ nav {
     align-items: center;
     justify-content: center;
     width: 100%;
+
 }
 
 
@@ -76,15 +152,18 @@ nav {
 }
 
 .nav-list a {
+    display: inline-block;
     text-decoration: none;
     color: black;
     font-size: 1.2rem;
+    text-shadow: 0 1px 2px rgba(0,0,0,0.25);
+    transition: all 0.25s ease-in-out;
 }
 
 .nav-list a:hover {
-    color: limegreen;
+    color: rgb(100,100,150);
+    transform: translateY(-5px);
 }
-
 
 .scroller-vertical {
     position: fixed;
@@ -112,7 +191,7 @@ nav {
     list-style: none;
     white-space: nowrap;
     align-items: flex-end;
-    animation: scrollDown 30s linear infinite;
+    animation: scrollDown 45s linear infinite;
 }
 
 
@@ -143,11 +222,12 @@ nav {
     font-weight: normal;
     font-size: 3rem;
     top: 3px;
+    text-shadow: 0 1px 2px rgba(0,0,0,0.25);
 }
 
 @font-face {
     font-family: 'planet-kosmos';
-    src: url(fonts/planet-kosmos.regular.woff2) format('woff2');
+    src: url(/fonts/planet-kosmos.regular.woff2) format('woff2');
 }
 
 
