--- a/matlock-dev/src/index.css
+++ b/matlock-dev/src/index.css
@@ -30,15 +30,14 @@ h2 {
     margin-bottom: 1rem;
     text-shadow: 0 1px 2px rgba(0,0,0,0.25);
     line-height: 1.6;
-    margin-left: 3rem;
 }
 
-img {
+/* img {
     position: absolute;
     width: 100%;
     height: 100%;
     z-index: -1;
-}
+} */
 
 footer {
     display: flex;
@@ -108,10 +107,11 @@ time {
 
 .card-icon {
     filter: invert(30%) sepia(100%) saturate(500%) hue-rotate(200deg);
-    filter: drop-shadow(2px 2px 3px rgba(0, 0, 0, 0.4));
+    filter: drop-shadow(1px 1px 1px rgba(0, 0, 0, 0.4));
     width: 2rem;                /* size of the logo */
     height: 2rem;
-    top: 1.7rem;                  /* position from top of card */
+    margin-left: 1rem;       /* space from text */
+    vertical-align: -0.4rem;  /* align with text */
     object-fit: contain;         /* keep aspect ratio */
 }
 
@@ -205,7 +205,24 @@ time {
     display: flex;
     align-items: center;
     justify-content: center;
-} 
+}
+
+.tool {
+    width: 2rem;                /* size of the logo */
+    height: 2rem;
+    object-fit: contain;         /* keep aspect ratio */
+    filter: drop-shadow(1px 1px 1px rgba(0, 0, 0, 0.4));
+}
+
+.tool-container {
+    display: flex;
+    flex-direction: row;
+    gap: 1rem;
+    margin-top: 1rem;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: flex-start;
+}
 
 #three-canvas {
     position: fixed;
